# Cornerstone

./: .env.example  .gitignore  50_ENHANCEMENTS.md  A2AWNN_MEDIA_STRATEGY.md  A2A_WORLD_WHITEPAPER_v2.md  ACTIONS_NOW.md  BLUEPRINT.md  BRAND_GUIDE.md  CODE_OF_CONDUCT.md  COMMIT_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FINAL_HANDOFF.md  GOOD_MORNING_REPORT.md  GOOD_MORNING_V3.md  IMPLEMENTATION_BLUEPRINT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  Makefile.v3  Makefile.windows  NEXT_STEPS.md  OVERNIGHT_BUILD_SUMMARY.md  PHASE_1_PROJECT_PLAN.md  PROJECT_BOARD.md  PUSH_GUIDE.md  QUICKSTART.md  README.md  README_V3.md  SCAAS_INTEGRATION.md  SECURITY.md  TECHNICAL_SYNTHESIS.md  TECH_STACK_REPORT.md  TEST.md  THE_NIGHT_IN_REVIEW.txt  V3_IMPLEMENTATION_COMPLETE.md  V3_QUICKSTART.md  V3_VISION_FIRST_SIMPLIFIED.md  docker-compose.v3.yml  (+6 more)
.github/workflows/: ci.yml
data/: README.md
docs/: geomythology.md  roadmap.md
docs/tutorials/: 01_agent_first_glimpse.md  README.md
scripts/: smoke_test.py
src/a2a_server/: Dockerfile.v3  __init__.py  main.py  requirements_v3.txt  test_v3_api.py  v3_main.py
src/a2a_server/tests/: __init__.py  test_main.py
src/a2aworld/: __init__.py
src/a2aworld.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/a2aworld/a2a_gateway/: main.py
src/database/: init.sql  v3_simplified_schema.sql
src/visual_cortex_api/: main.py
