[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2aworld"
version = "0.0.1"
description = "A2A-World: Recreational Playground for AI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "A2A World LLC", email = "support@a2aworld.ai"}]
license = {text = "Apache-2.0"}
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.0",
  "pydantic==2.9.0",
  "httpx==0.27.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

